welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: Missing closing brace `}' assumed here
var x=0
^Program:2: error: expected class or object definition
def vuBiscuit():Boolean = {
^