welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var x=0
def vuBiscuit():Boolean = {

if(x>0) {return false} else {return true}		if(estSurBiscuit) {x=x+1}


		
		def haveBaggle():Boolean = {

	for (i<-1 to 6) {avance()}
	
	if (vuBiscuit()==false) {return false} else {return true
	}
	
}
haveBaggle()